<resources>
    <string name="app_name">My Shop</string>
    <string name="sign_google">Sign in with Google</string>
    <string name="sign_apple">Sign in with Apple</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="login">Log in</string>
    <string name="already">Already have account?</string>
    <string name="welcome">Welcome back</string>
    <string name="password">Password</string>
    <string name="login2">Login</string>
    <string name="errorEmail">Enter Valid Email Address</string>
    <string name="errorFirstName">Enter first name</string>
    <string name="errorLastName">Enter Last name</string>
    <string name="profile">Profile</string>
    <string name="changePhoto">Change photo</string>
    <string name="userName">Satria Adhi Pradana</string>
    <string name="upload">Upload item</string>
    <string name="trade">Trade store</string>
    <string name="payment">Payment method</string>
    <string name="balance">Balance</string>
    <string name="userBalance">$ 1593</string>
    <string name="tradeHis">Trade history</string>
    <string name="restorePur">Restore Purchase</string>
    <string name="help">Help</string>
    <string name="logOut">Log out</string>
    <string name="tradeBy">Trade by</string>
    <string name="bata">bata</string>
    <string name="location">Location</string>
    <string name="search">What are you looking for?</string>
    <string name="phones">Phones</string>
    <string name="headPhones">Headphones</string>
    <string name="games">Games</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="kids">Kids</string>
    <string name="latest">Latest</string>
    <string name="viewAll">View all</string>
    <string name="flashSale">Flash Sale</string>
    <string name="brands">Brands</string>
    <string name="home">home</string>
    <string name="favorites">favorites</string>
    <string name="sale">sale</string>
    <string name="chat">chat</string>
    <string name="prof">prof</string>
    <string name="load_fail">Load fail</string>
    <string name="load">Loading…</string>
    <string name="discount">% off</string>
    <string name="not_found">User not found</string>
    <string name="exists">A user with this name already exists</string>
    <string name="color">Color:</string>
    <string name="quantity">Quantity:</string>
    <string name="add_cart">ADD TO CART</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>